--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-     <!-- Link to stylesheet  -->
+    <!-- Link to stylesheet  -->
     <link rel="stylesheet" href="static/css/style.css">
 </head>
-<body>
+<body class="bg-dark">
     <div class="wrapper">
         <!-- Navigation bar -->
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <a class="navbar-brand" href="index.html">UFO Sightings</a>
         </nav>
     </div> 
-     <!-- Page header jumbotron -->
+    <!-- Page header jumbotron -->
     <div class="jumbotron">
-        <h1>The truth is out there</h1>
+        <h1 class="display-4">The truth is out there</h1>
     </div>
-     <!-- Container for paragraph and article titles -->
+    <!-- Container for paragraph and article titles -->
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-4">
                 <h3>UFO Sightings: Fact or Fancy? <small>Ufologists Weigh In</small></h3>
             </div>
-        <div class="col-md-8">
-            <p>
+            <div class="col-md-8">
+                <p>
                 Are we alone in the universe? For millennia, humans have turned to the sky to answer this question. 
                 Now, thanks to research generously funded by W. Avy, a UFO-enthusiast and amateur ufologist, 
                 we can supplement our sky-searching with data analysis.
@@ -52,7 +52,8 @@
                 <br><br>
                 So what do YOU think? Are we alone in the universe? Are aliens trying to contact us, 
                 or do they want to be left alone? Dig through the data yourself, and let us know what you see.
-            </p>  
+                </p>  
+            </div>
         </div>
     </div>
     <!-- Container for filter section and table -->
@@ -60,14 +61,17 @@
         <div class="row">
             <!-- Filters section -->
             <div class="col-md-3">
-                <form>
+                <form class="bg-dark">
                     <p>Filter Search</p>
-                    <ul class="list-group">
+                    <ul class="list-group bg-dark">
                         <!-- Date filter input -->
-                        <li class="list-group-item">
+                        <li class="list-group-item bg-dark">
                             <label for="date">Enter Date</label>
                             <input type="text" placeholder="1/10/2010" id="datetime" />
-                            <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                        </li>
+                        <!-- Button -->
+                        <li class="list-group-item bg-dark">   
+                            <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
                         </li>
                     </ul>
                 </form>
@@ -89,5 +93,11 @@
                     <tbody></tbody>
                 </table>
             </div>
+        </div>
+    </div>   
+    <!-- Connect to data and app files -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+    <script src="static/js/data.js"></script>
+    <script src="static/js/app.js"></script>
 </body>
 </html>
