--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-4">
-                <h3>UFO Sightings: Fact or Fancy? <small>Ufologists Weigh In</small></h3>
+                <h3>UFO Sightings: Fact or Fancy?<br><small>Ufologists Weigh In</small></h3>
             </div>
             <div class="col-md-8">
                 <p>
@@ -67,12 +67,32 @@
                         <!-- Date filter input -->
                         <li class="list-group-item bg-dark">
                             <label for="date">Enter Date</label>
-                            <input type="text" placeholder="1/10/2010" id="datetime" />
+                            <input type="text" class="form-control" placeholder="X/X/XXXX" id="datetime" />
+                        </li>
+                         <!-- city filter input -->
+                         <li class="list-group-item bg-dark">
+                            <label for="city">Enter City</label>
+                            <input type="text" class="form-control" placeholder="el cajon" id="city" />
+                        </li>
+                        <!-- state filter input -->
+                        <li class="list-group-item bg-dark">
+                            <label for="state">Enter State</label>
+                            <input type="text" class="form-control" placeholder="ca" id="state" />
+                        </li>
+                        <!-- country filter input -->
+                        <li class="list-group-item bg-dark">
+                            <label for="country">Enter Country</label>
+                            <input type="text" class="form-control" placeholder="us" id="country" />
+                        </li>
+                        <!-- shape filter input -->
+                        <li class="list-group-item bg-dark">
+                            <label for="shape">Enter Shape</label>
+                            <input type="text" class="form-control" placeholder="shape of object" id="shape" />
                         </li>
                         <!-- Button -->
-                        <li class="list-group-item bg-dark">   
+                        <!--li class="list-group-item bg-dark">   
                             <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
-                        </li>
+                        </li> -->
                     </ul>
                 </form>
             </div>
